--- a/cover/index.html
+++ b/cover/index.html
@@ -64,7 +64,7 @@
         Click Me to know the Venue!!
       </a>
     </div>
-    <div id="collapseOne" class="collapse show" data-parent="#accordion">
+    <div id="collapseOne" class="collapse" data-parent="#accordion">
       <div class="card-body">
        <address class="address">Seashore group of Hotels,D/No 13 C1 D WCC Road, Tower Jct, Nagercoil, Tamil Nadu 629001</address>
       </div>
