--- a/cover/index.html
+++ b/cover/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+doctype html>
 <html lang="en" class="h-100">
   <head>
     <meta charset="utf-8">
@@ -9,6 +9,8 @@
     <title>Invitation</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/cover/">
@@ -44,18 +46,16 @@
     <link href="cover.css" rel="stylesheet">
   </head>
   <div class="pic">
+    <img src="invite.jpg" alt="Invite-image" class="responsive">
+    <div class="centered">Welcome On Board To<br> Our</div>
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
   <body class="d-flex h-100 text-center text-white bg-dark">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-  <header class="mb-auto">
-      <h3 class="font-italic" class="col">Welcome On Board to<br><br> Our</h3>
-      
-  </header>
-</div>
+
 <div id="accordion">
 
   <div class="card">
